--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,6 +3,7 @@ FROM python:3.6-stretch
 COPY requirements.txt requirements.txt
 RUN apt-get update \
     && apt-get install -y python3-pip python3-dev \
+    && pip3 install --upgrade pip \
     && pip3 install -r requirements.txt
 
 ARG user_id
