--- a/app/ui/requirements.txt
+++ b/app/ui/requirements.txt
@@ -1,9 +1,5 @@
-numpy
-pandas
 flask
 WTForms
 Flask-WTF
 wtforms_components
-newsapi-python
-ibm-watson
-git+https://github.com/qmeeus/textrank.git
+requests
