--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'  # version of compose format 
 
 services:
-  balancedview-service:
+  webservice:
     build: ./app/api  # path is relative to docker-compose.yml localtion
     volumes:
       - ./app/api:/home/patrick/src # mount point
@@ -15,4 +15,4 @@ services:
     ports:
       - 5000:5000  # host:container
     depends_on:
-      - balancedview-service
+      - webservice
