--- a/app/api/requirements.txt
+++ b/app/api/requirements.txt
@@ -4,5 +4,5 @@ numpy
 pandas
 newsapi-python
 ibm-watson
-google-cloud-translate
+#google-cloud-translate
 git+https://github.com/qmeeus/textrank.git
