--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,8 +1,8 @@
-FROM python:3.7-alpine
+FROM python:3.6-slim-stretch
 
-RUN apk update && apk upgrade \
-  && apk add --no-cache git gcc g++ \
-  && rm -rf /var/cache/apk/*
+RUN apt-get update \
+    && apt-get install -y python3-pip python3-dev git \
+    && pip install --upgrade pip
 
 COPY requirements.txt /
 RUN pip install -r /requirements.txt
@@ -12,39 +12,16 @@ ENV USER=patrick
 ENV UID=27328
 WORKDIR "/$USER"
 
-RUN adduser \
-    --disabled-password \
-    --gecos "" \
-    --home "$(pwd)" \
-    --no-create-home \
-    --uid "$UID" \
-    "$USER" \
+RUN useradd \
+  --home-dir "$(pwd)" \
+  --no-create-home \
+  --uid "$UID" \
+  "$USER" \ 
  && chown $USER:$USER .
 
 USER $USER
 
-CMD [ "python", "api.py" ]
+ENV LC_ALL=C.UTF-8
+ENV LANG=C.UTF-8
 
-
-# FROM python:3.6-slim-stretch
-
-# COPY requirements.txt requirements.txt
-# RUN apt-get update \
-#     && apt-get install -y python3-pip python3-dev git \
-#     && pip3 install --upgrade pip \
-#     && pip3 install -r requirements.txt
-
-# # Did not find a way to use build_arg with heroku
-# RUN useradd --uid 1001 --shell /bin/bash --create-home patrick
-# USER patrick
-
-# WORKDIR /home/patrick
-# RUN mkdir /home/patrick/src
-# WORKDIR /home/patrick/src
-
-# ENV PATH="/home/patrick/.local/bin/:$PATH"
-# COPY --chown=patrick:users . /home/patrick/src/
-
-# ENV LANG=C.UTF-8
-
-# CMD [ "python", "api.py" ]
+CMD [ "flask", "run", "--host=0.0.0.0" ]
