simplify and optimise Dockerfile + setup full Dockerfile for heroku

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
+flask
+flask-restful
+Flask-WTF
+git+https://github.com/qmeeus/textrank.git
+ibm-watson
+newsapi-python
 numpy
 pandas
-flask
+python-dotenv
+requests
 WTForms
-Flask-WTF
 wtforms_components
-newsapi-python
-ibm-watson
-google-cloud-translate
-git+https://github.com/qmeeus/textrank.git
