--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update \
 COPY requirements.txt /
 RUN pip install -r /requirements.txt
 
-ENV USER=patrick
+ENV USER=api
 ENV UID=27328
 WORKDIR "/$USER"
 
@@ -25,4 +25,4 @@ COPY . .
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
 
-CMD [ "flask", "run", "--host=0.0.0.0" ]
+CMD [ "gunicorn", "--chdir", "..", "-w3", "--bind=0.0.0.0:5000", "api.wsgi" ]
