fix permission problems with db creation by supplying uid at build

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -8,13 +8,14 @@ COPY requirements.txt /
 RUN pip install -r /requirements.txt
 
 ENV USER=api
-ENV UID=27328
+ARG UID
 WORKDIR "/$USER"
 
 RUN useradd \
   --home-dir "$(pwd)" \
   --no-create-home \
   --uid "$UID" \
+  --gid "$UID" \
   "$USER" \ 
  && chown $USER:$USER .
 
