--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,15 +37,24 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     # Define the parameters to optimize the delivery of static content
-    sendfile        on;
+    sendfile       on;
     tcp_nopush     on;
     tcp_nodelay    on;
 
     # Define the timeout value for keep-alive connections with the client
     keepalive_timeout  65;
 
+    # Mask Nginx version details from the HTTP Response Header.
+    server_tokens off;
+
     # Define the usage of the gzip compression algorithm to reduce the amount of data to transmit
-    #gzip  on;
+    gzip  on;
+
+    # Clickjacking Attack
+    add_header X-Frame-Options "SAMEORIGIN";
+
+    # X-XSS Protection
+    add_header X-XSS-Protection "1; mode=block";
 
     # Include additional parameters for virtual host(s)/server(s)
     include /etc/nginx/conf.d/*.conf;
