add rule for no sniff on some browsers

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -56,6 +56,9 @@ http {
     # X-XSS Protection
     add_header X-XSS-Protection "1; mode=block";
 
+    # Disable content-type sniffing on some browsers.
+    add_header X-Content-Type-Options nosniff;
+
     # Include additional parameters for virtual host(s)/server(s)
     include /etc/nginx/conf.d/*.conf;
 }
