authorize all csp + inline (unsafe)

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -59,6 +59,8 @@ http {
     # Disable content-type sniffing on some browsers.
     add_header X-Content-Type-Options nosniff;
 
+    add_header Content-Security-Policy "default-src *; font-src *;img-src * data:; script-src * 'unsafe-inline'; style-src * 'unsafe-inline';";
+
     # Include additional parameters for virtual host(s)/server(s)
     include /etc/nginx/conf.d/*.conf;
 }
