--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -15,14 +15,18 @@ server {
    # Define the specified charset to the “Content-Type” response header field
    charset utf-8;
 
-   # Configure NGINX to deliver static content from the specified folder
-   location /static {
-       proxy_pass http://localhost:9999/static;
-       
+   location /api {
+       # Define the location of the proxy server to send the request to
+       proxy_pass http://localhost:5000/;
+
+       # Redefine the header fields that NGINX sends to the upstream server
        proxy_set_header Host $host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+       # Define the maximum file size on file uploads
+       client_max_body_size 5M;
    }
 
    # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
