--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,4 +4,4 @@ RUN rm /etc/nginx/nginx.conf
 COPY nginx.conf /etc/nginx/
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY app.conf /etc/nginx/conf.d/
+COPY server.conf /etc/nginx/conf.d/
