disable api access and set default content-type of ui

--- a/nginx/server.conf
+++ b/nginx/server.conf
@@ -18,17 +18,17 @@ server {
     # Define the maximum file size on file uploads
     client_max_body_size 5M;
 
-    location /api {
+    # location /api {
 
-        # only allow POST requests to the /api URL
-        limit_except POST {
-            deny all;     
-        }
+    #     # only allow POST requests to the /api URL
+    #     limit_except POST {
+    #         deny all;     
+    #     }
 
-        # Define the location of the proxy server to send the request to
-        proxy_pass http://localhost:5000/;
-        proxy_set_header content-type "application/json";
-    }
+    #     # Define the location of the proxy server to send the request to
+    #     proxy_pass http://localhost:5000/;
+    #     proxy_set_header content-type "application/json";
+    # }
 
    # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
     location / {
@@ -40,6 +40,7 @@ server {
 
         # Define the location of the proxy server to send the request to
         proxy_pass http://localhost:9999/;
+        proxy_set_header content-type "text/html";
 
     }
 }
