nginx publish api to big port not accessible from outside

--- a/nginx/services/api.conf
+++ b/nginx/services/api.conf
@@ -3,7 +3,7 @@
 server {
 
    # Define the server name, IP address, and/or port of the server
-   listen  0.0.0.0:8080;
+   listen  0.0.0.0:32597;
    # server_name xxx.yyy.zzz.aaa
 
    # Define the specified charset to the “Content-Type” response header field
@@ -18,28 +18,16 @@ server {
     # Define the maximum file size on file uploads
     client_max_body_size 5M;
 
-    # location /api {
-
-    #     # only allow POST requests to the /api URL
-    #     limit_except POST {
-    #         deny all;     
-    #     }
-
-    #     # Define the location of the proxy server to send the request to
-    #     proxy_pass http://localhost:5000/;
-    #     proxy_set_header content-type "application/json";
-    # }
-
-   # Configure NGINX to reverse proxy HTTP requests to the upstream server (Gunicorn (WSGI server))
     location / {
 
-        # only allow GET and POST requests to the /api URL
-        limit_except GET POST { 
-            deny  all; 
+        # only allow POST requests to the /api URL
+        limit_except POST {
+            deny all;     
         }
 
         # Define the location of the proxy server to send the request to
-        proxy_pass http://localhost:9999/;
-
+        proxy_pass http://localhost:5000/;
+        proxy_set_header content-type "application/json";
     }
+
 }
