use gevent workers for gunicorn (better for asynchronous tasks)

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -25,4 +25,4 @@ COPY . .
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
 
-CMD [ "gunicorn", "--chdir", "..", "-w3", "--bind=0.0.0.0:5000", "api.wsgi" ]
+CMD [ "gunicorn", "--chdir", "..", "-w3", "-k", "gevent", "--bind=0.0.0.0:5000", "api.wsgi" ]
