--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.7-alpine
 
+RUN apk add build-base
 COPY requirements.txt /
 RUN pip install -r /requirements.txt
 
@@ -23,4 +24,4 @@ COPY . .
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
 
-CMD [ "gunicorn", "--chdir", "..", "-w3", "--bind=0.0.0.0:9999", "ui.wsgi" ]
+CMD [ "gunicorn", "--chdir", "..", "-w3", "-k", "gevent", "--bind=0.0.0.0:9999", "ui.wsgi" ]
