--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,3 +1,4 @@
+urllib3<1.25,>=1.21.1
 flask
 flask-restful
 python-dotenv
@@ -13,3 +14,4 @@ knapsack
 gevent
 gunicorn[gevent]
 elasticsearch
+elasticsearch-dsl>=7.0.0,<8.0.0
