--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,17 +1,18 @@
-urllib3<1.25,>=1.21.1
+elasticsearch>=7.0.0,<8.0.0
+elasticsearch-dsl>=7.0.0,<8.0.0
+feedparser
 flask
 flask-restful
-python-dotenv
+gevent
+gunicorn
+gunicorn[gevent]
+ibm-watson
+knapsack
+logzero
+newsapi-python
 numpy
 pandas
-newsapi-python
-ibm-watson
+python-dotenv
+requests==2.21.0
 spacy
-gunicorn
-logzero
-feedparser
-knapsack
-gevent
-gunicorn[gevent]
-elasticsearch
-elasticsearch-dsl>=7.0.0,<8.0.0
+urllib3==1.21.1
