setup access to kibana in nginx

--- a/nginx/services/ui.conf
+++ b/nginx/services/ui.conf
@@ -30,4 +30,8 @@ server {
         proxy_pass http://localhost:9999/;
 
     }
+
+    location /kibana-6352840 {
+        proxy_pass http://localhost:5601/;
+    }
 }
