--- a/nginx/services/ui.conf
+++ b/nginx/services/ui.conf
@@ -31,7 +31,7 @@ server {
 
     }
 
-    location /kibana-6352840 {
-        proxy_pass http://localhost:5601/;
-    }
+    # location /kibana-6352840/ {
+    #     proxy_pass http://localhost:5601/;
+    # }
 }
