--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/qmeeus/balancedview-api.git
 [submodule "ui"]
 	path = ui
-	url = git@github.com:qmeeus/balancedview-ui.git
+	url = https://github.com/qmeeus/balancedview-ui.git
